[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "EasyMarkdown"
version = "0.0.2"
authors = [
  { name="shotaro", email="taro06360@gmail.com" },
]
description = "You can easily generate markdowns in python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tarou-imokenpi/EasyMarkdown"
"Bug Tracker" = "https://github.com/tarou-imokenpi/EasyMarkdown/issues"